[package]
name = "dmzj2pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "wrap_help"] }
mktemp = "0.5.1"
futures = "0.3.30"
tokio-retry = "0.3.0"
trauma = "2.2.4"
xdg = "2.5.2"

dmzj = "0.3.0"
# dmzj-proto requires exact version
protobuf = "= 3.3"
protobuf-codegen = "= 3.3"
